force-app/main/default/objects/Opportunity_Site__c/Opportunity_Site__c.object-meta.xml
<CustomObject>
    <label>Opportunity Site</label>
    <nameField>
        <displayFormat>OppSite-{00000000}</displayFormat>
        <label>Opportunity Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Site</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>