force-app/main/default/objects/Opportunity_Site__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunity Site</relationshipLabel>
    <relationshipName>Opportunity_Site</relationshipName>
    <type>Lookup</type>
</CustomField>