force-app/main/default/objects/Opportunity_Site__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Opportunity Site</relationshipLabel>
    <relationshipName>Opportunity_Site</relationshipName>
    <type>Lookup</type>
</CustomField>