force-app/main/default/objects/Opportunity_Site__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Opportunity Site</relationshipLabel>
    <relationshipName>Opportunity_Site</relationshipName>
    <type>Lookup</type>
</CustomField>