force-app/main/default/objects/Opportunity_Site__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <formula>TEXT(Site__r.Unit_of_Measure__c)</formula>
    <label>UOM</label>
    <type>Text</type>
</CustomField>